<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">My Icarus</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Error_Login">Wrong credentials or server down!</string>
    <string name="Grades">Grades</string>
    <string name="Request">Request</string>
    <string name="Course_Register">Course Register</string>
    <string name="About">About</string>
    <string name="Stats">Stats</string>
    <string name="Logout">Logout</string>
    <string name="Student_ID">Student ID</string>
    <string name="Surname">Surname</string>
    <string name="Firstname">Firstname</string>
    <string name="Father_Name">Father Name</string>
    <string name="Semester">Semester</string>
    <string name="Home_Address">Home Address</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Send_Address">Send Address/Fax</string>
    <string name="Another_Parer">Insert what else?</string>
    <string name="Send">Send</string>
    <string name="Send_way">I wish to deliver by:</string>
    <string name="Office">the office, next the day of application</string>
    <string name="Courier">courier, on address</string>
    <string name="FAX">fax, on phone</string>
    <string name="Papers_to_get">I wish to get:</string>
    <string name="Notification">Notification</string>
    <string name="NotificationMSG">Please enter all the fields.</string>
    <string name="RequestSuccess">Your request has been send!</string>
    <string name="RequestFailed">Your request Failed!</string>


    <string name="courses_all">all</string>
    <string name="courses_passed">passed</string>
    <string name="courses_semester">semester</string>
    <string name="semester">st Semester</string>

    <!-- Nav Drawer Menu -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_grades</item>
        <item>@drawable/ic_request</item>
        <item>@drawable/ic_register</item>
        <item>@drawable/ic_stats</item>
        <item>@drawable/ic_about</item>
        <item>@drawable/ic_logout</item>
    </array>
    <!-- Nav Drawer Menu Items -->

    <string name="title_activity_main" translatable="false">My Icarus</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_menu_user">other</string>
    <string name="title_activity_marks" translatable="false">MarksActivity</string>
</resources>
