<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="30dp"
    android:paddingTop="30dp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    tools:context="gr.rambou.myicarus.request">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Student_ID"
            android:id="@+id/textView8"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/student_id"
            android:layout_column="2"
            android:hint="321/XXXXXX" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Surname"
            android:id="@+id/textView5"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/surname"
            android:layout_column="2" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Firstname"
            android:id="@+id/textView6"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/firstname"
            android:layout_column="2" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Father_Name"
            android:id="@+id/textView7"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/fathername"
            android:layout_column="2" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Semester"
            android:id="@+id/textView9"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/semester"
            android:layout_column="2" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:transitionGroup="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Home_Address"
            android:id="@+id/textView10"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_address"
            android:layout_column="2" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Phone_Number"
            android:id="@+id/textView11"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone_number"
            android:layout_column="2" />
    </TableRow>

    <TextView
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Send_way"
        android:id="@+id/textView12"
        android:layout_column="2" />
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Office"
            android:id="@+id/radioButton"
            android:layout_column="1"
            android:layout_span="2" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Courier"
            android:id="@+id/radioButton1"
            android:layout_column="1"
            android:layout_span="2" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FAX"
            android:id="@+id/radioButton2"
            android:layout_column="1"
            android:layout_span="2" />
    </RadioGroup>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fax_or_address"
            android:autoText="false" />

        <TextView
            android:paddingTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Papers_to_get"
            android:id="@+id/textView13"
            android:layout_column="1" />


    <TableLayout
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">

        <TableRow >
            <EditText
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/textView_0"
                android:numeric="integer"
                android:inputType="number"
                android:text="0" />

            <TextView
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Βεβαίωση Σπουδών"
                android:id="@+id/textView1_text" />
        </TableRow>


        <TableRow >
            <EditText
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/textView_1"
                android:numeric="integer"
                android:inputType="number"
                android:text="0"/>

            <TextView
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Πιστοποιητικό Αναλυτικής Βαθμολογίας"
                android:id="@+id/textView2_text"/>
        </TableRow>

        <TableRow >
            <EditText
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/textView_2"
                android:numeric="integer"
                android:inputType="number"
                android:text="0"/>

            <TextView
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Πιστοποιητικό Αναλυτικής Βαθμολογίας Πτυχιούχου, με Βαθμό Πτυχίου"
                android:id="@+id/textView3_text"/>
        </TableRow>

        <TableRow>
            <EditText
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/textView_3"
                android:numeric="integer"
                android:inputType="number"
                android:text="0"/>

            <TextView
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Πιστοποιητικό Αναλυτικής Βαθμολογίας Πτυχιούχου, χωρίς Βαθμό Πτυχίου"
                android:id="@+id/textView14"/>
        </TableRow>

        <TableRow android:layout_width="fill_parent">
            <EditText
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/textView_4"
                android:numeric="integer"
                android:inputType="number"
                android:text="0"/>

            <TextView
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Βεβαίωση για την στρατολογία"
                android:id="@+id/textView4_text"/>
        </TableRow>

        <TableRow android:layout_width="fill_parent">
            <EditText
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/textView_5"
                android:numeric="integer"
                android:inputType="number"
                android:text="0"/>

            <TextView
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Βεβαίωση Διαγραφής"
                android:id="@+id/textView5_text"/>
        </TableRow>

        <TableRow android:layout_width="fill_parent">
            <EditText
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/textView_6"
                android:numeric="integer"
                android:inputType="number"
                android:text="0"/>

            <TextView
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Επικυρωμένο Αντίγραφο Πτυχίου"
                android:id="@+id/textView6_text"/>
        </TableRow>

        <TableRow >
            <EditText
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/textView_7"
                android:numeric="integer"
                android:inputType="number"
                android:text="0"/>

            <TextView
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Βεβαίωση ότι πληρώ προϋποθέσεις απόκτησης πτυχίου"
                android:id="@+id/textView7_text"/>
        </TableRow>

        <TableRow >
            <EditText
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/textView_8"
                android:numeric="integer"
                android:inputType="number"
                android:text="0"/>

            <TextView
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Βεβαίωση ότι συμμετείχα στο μάθημα Πρακτική Ασκηση"
                android:id="@+id/textView8_text"/>
        </TableRow>

        <TableRow android:layout_width="fill_parent">
            <EditText
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/textView_9"
                android:numeric="integer"
                android:inputType="number"
                android:text="0"/>

            <TextView
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Πιστοποιητικό στεγαστικού επιδόματος"
                android:id="@+id/textView9_text"/>
        </TableRow>

        <TableRow android:layout_width="fill_parent">
            <EditText
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/textView_10"
                android:numeric="integer"
                android:inputType="number"
                android:text="0"/>

            <TextView
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Αλλο"
                android:id="@+id/textView10_text"/>
        </TableRow>

    </TableLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/another_paper"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Send"
        android:id="@+id/button1"
        android:onClick="RequestSend_Clicked"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@+id/textView14"
        />

</TableLayout>
</ScrollView>